welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:3: error: not found: value num
	for (i <- 0 to num.length-1)
                       ^